[gd_scene load_steps=19 format=2]

[ext_resource path="res://ui/lobby/lobby_menu.gd" type="Script" id=1]
[ext_resource path="res://ui/lobby/network_message_popup.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/lobby/keyboard_popup.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/lobby/player_slot.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/resources/Coiny-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://ui/menu_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/visor_transition.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
extra_spacing_top = 2
extra_spacing_bottom = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 24
extra_spacing_top = 2
extra_spacing_bottom = 8
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 24
extra_spacing_top = 2
extra_spacing_bottom = 8
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 24
extra_spacing_top = 2
extra_spacing_bottom = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 20
extra_spacing_top = 2
extra_spacing_bottom = 7
font_data = ExtResource( 5 )

[node name="Lobby" type="Control"]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.117647, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectionSection" type="ColorRect" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 64 )
color = Color( 0.227451, 0.227451, 0.227451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ConnectionSection"]
margin_left = 10.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnlineContainer" type="HBoxContainer" parent="ConnectionSection/VBoxContainer"]
margin_right = 385.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConnectionSection/VBoxContainer/OnlineContainer"]
margin_top = 4.0
margin_right = 155.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Online code: "

[node name="CodeEditContainer" type="CenterContainer" parent="ConnectionSection/VBoxContainer/OnlineContainer" groups=[
"disconnected_ui",
]]
margin_left = 159.0
margin_right = 329.0
margin_bottom = 32.0

[node name="LineEdit" type="LineEdit" parent="ConnectionSection/VBoxContainer/OnlineContainer/CodeEditContainer"]
margin_right = 170.0
margin_bottom = 32.0
rect_min_size = Vector2( 170, 30 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath("../../JoinContainer/Button")
focus_neighbour_bottom = NodePath("../../../LocalContainer/CodeEditContainer/LineEdit")
custom_fonts/font = SubResource( 2 )
max_length = 7
context_menu_enabled = false

[node name="JoinContainer" type="CenterContainer" parent="ConnectionSection/VBoxContainer/OnlineContainer" groups=[
"disconnected_ui",
]]
margin_left = 333.0
margin_right = 385.0
margin_bottom = 32.0

[node name="Button" type="Button" parent="ConnectionSection/VBoxContainer/OnlineContainer/JoinContainer"]
margin_top = 5.0
margin_right = 52.0
margin_bottom = 27.0
focus_neighbour_left = NodePath("../../CodeEditContainer/LineEdit")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../../LocalContainer/JoinContainer/Button")
size_flags_vertical = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.470588, 0.470588, 0.470588, 1 )
text = "Join"

[node name="Code" type="Label" parent="ConnectionSection/VBoxContainer/OnlineContainer" groups=[
"multiplayer_ui",
]]
visible = false
margin_left = 414.0
margin_top = 14.0
margin_right = 531.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 9 )
text = "SpecialCode"

[node name="LocalContainer" type="HBoxContainer" parent="ConnectionSection/VBoxContainer"]
margin_top = 36.0
margin_right = 385.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConnectionSection/VBoxContainer/LocalContainer"]
margin_top = 4.0
margin_right = 144.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Local code: "

[node name="CodeEditContainer" type="CenterContainer" parent="ConnectionSection/VBoxContainer/LocalContainer" groups=[
"disconnected_ui",
]]
margin_left = 148.0
margin_right = 308.0
margin_bottom = 32.0

[node name="LineEdit" type="LineEdit" parent="ConnectionSection/VBoxContainer/LocalContainer/CodeEditContainer"]
margin_right = 160.0
margin_bottom = 32.0
rect_min_size = Vector2( 160, 30 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../../OnlineContainer/CodeEditContainer/LineEdit")
focus_neighbour_right = NodePath("../../JoinContainer/Button")
custom_fonts/font = SubResource( 2 )
max_length = 7
context_menu_enabled = false

[node name="JoinContainer" type="CenterContainer" parent="ConnectionSection/VBoxContainer/LocalContainer" groups=[
"disconnected_ui",
]]
margin_left = 312.0
margin_right = 364.0
margin_bottom = 32.0

[node name="Button" type="Button" parent="ConnectionSection/VBoxContainer/LocalContainer/JoinContainer"]
margin_top = 5.0
margin_right = 52.0
margin_bottom = 27.0
focus_neighbour_left = NodePath("../../CodeEditContainer/LineEdit")
focus_neighbour_top = NodePath("../../../OnlineContainer/JoinContainer/Button")
focus_neighbour_right = NodePath(".")
size_flags_vertical = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.470588, 0.470588, 0.470588, 1 )
text = "Join"

[node name="Code" type="Label" parent="ConnectionSection/VBoxContainer/LocalContainer" groups=[
"multiplayer_ui",
]]
visible = false
margin_left = 380.0
margin_top = 3.0
margin_right = 477.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 9 )
text = "Local IP"

[node name="LobbySections" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameContainer" type="MarginContainer" parent="LobbySections"]
margin_right = 510.0
margin_bottom = 484.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="LobbySections/GameContainer"]
margin_left = 10.0
margin_right = 500.0
margin_bottom = 484.0
custom_constants/separation = 10

[node name="PlayerContainer" type="GridContainer" parent="LobbySections/GameContainer/VBoxContainer"]
margin_right = 490.0
margin_bottom = 304.0
columns = 2

[node name="PlayerSlot1" parent="LobbySections/GameContainer/VBoxContainer/PlayerContainer" instance=ExtResource( 4 )]
margin_right = 243.0
margin_bottom = 150.0

[node name="PlayerSlot2" parent="LobbySections/GameContainer/VBoxContainer/PlayerContainer" instance=ExtResource( 4 )]
margin_left = 247.0
margin_right = 490.0
margin_bottom = 150.0

[node name="PlayerSlot3" parent="LobbySections/GameContainer/VBoxContainer/PlayerContainer" instance=ExtResource( 4 )]
margin_top = 154.0
margin_right = 243.0
margin_bottom = 304.0

[node name="PlayerSlot4" parent="LobbySections/GameContainer/VBoxContainer/PlayerContainer" instance=ExtResource( 4 )]
margin_left = 247.0
margin_top = 154.0
margin_right = 490.0
margin_bottom = 304.0

[node name="OpenMultiplayerButton" parent="LobbySections/GameContainer/VBoxContainer" groups=[
"host_ui",
] instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 314.0
margin_right = 242.0
margin_bottom = 340.0
text = "Open to multiplayer"

[node name="CloseMultiplayerButton" parent="LobbySections/GameContainer/VBoxContainer" groups=[
"host_ui",
] instance=ExtResource( 6 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 350.0
margin_right = 214.0
margin_bottom = 376.0
text = "Close multiplayer"

[node name="LeaveLobbyButton" parent="LobbySections/GameContainer/VBoxContainer" groups=[
"client_ui",
] instance=ExtResource( 6 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 350.0
margin_right = 144.0
margin_bottom = 376.0
text = "Leavy lobby"

[node name="EnableTeamsButton" parent="LobbySections/GameContainer/VBoxContainer" groups=[
"host_ui",
] instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 350.0
margin_right = 165.0
margin_bottom = 376.0
text = "Enable teams"

[node name="StartButton" parent="LobbySections/GameContainer/VBoxContainer" groups=[
"host_ui",
] instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 386.0
margin_right = 68.0
margin_bottom = 412.0
text = "Start"

[node name="BackButton" parent="LobbySections/GameContainer/VBoxContainer" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 422.0
margin_right = 255.0
margin_bottom = 448.0
text = "Return to main menu"

[node name="TutorialContainer" type="MarginContainer" parent="LobbySections"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 484.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Rect" type="ColorRect" parent="LobbySections/TutorialContainer"]
margin_left = 10.0
margin_right = 500.0
margin_bottom = 474.0
rect_min_size = Vector2( 100, 100 )
color = Color( 0.227451, 0.227451, 0.227451, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="LobbySections/TutorialContainer/Rect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="LobbySections/TutorialContainer/Rect/VBoxContainer"]
margin_right = 470.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
text = "How to play the game"
align = 1

[node name="Video" type="ColorRect" parent="LobbySections/TutorialContainer/Rect/VBoxContainer"]
margin_top = 32.0
margin_right = 470.0
margin_bottom = 332.0
rect_min_size = Vector2( 0, 300 )
color = Color( 0.054902, 0.054902, 0.054902, 1 )

[node name="Description" type="Label" parent="LobbySections/TutorialContainer/Rect/VBoxContainer"]
margin_top = 342.0
margin_right = 470.0
margin_bottom = 454.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 11 )
text = "Press A to charge joust
Press B to dodge
Press X to parry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NetworkMessagePopup" parent="." instance=ExtResource( 2 )]
pause_mode = 2

[node name="ConnectionTimer" type="Timer" parent="."]
pause_mode = 2
wait_time = 5.0
one_shot = true

[node name="KeyboardPopup" parent="." instance=ExtResource( 3 )]

[node name="VisorTransition" parent="." instance=ExtResource( 7 )]
[connection signal="pressed" from="ConnectionSection/VBoxContainer/OnlineContainer/JoinContainer/Button" to="." method="_connect_online"]
[connection signal="pressed" from="ConnectionSection/VBoxContainer/LocalContainer/JoinContainer/Button" to="." method="_connect_local"]
[connection signal="pressed" from="LobbySections/GameContainer/VBoxContainer/OpenMultiplayerButton" to="." method="_on_OpenMultiplayerButton_pressed"]
[connection signal="pressed" from="LobbySections/GameContainer/VBoxContainer/CloseMultiplayerButton" to="." method="_close_server"]
[connection signal="pressed" from="LobbySections/GameContainer/VBoxContainer/LeaveLobbyButton" to="." method="_disconnect"]
[connection signal="pressed" from="LobbySections/GameContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="LobbySections/GameContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="about_to_show" from="NetworkMessagePopup" to="." method="_on_Popup_about_to_show"]
[connection signal="popup_hide" from="NetworkMessagePopup" to="." method="_on_Popup_hide"]
[connection signal="timeout" from="ConnectionTimer" to="." method="_on_ConnectionTimer_timeout"]
[connection signal="about_to_show" from="KeyboardPopup" to="." method="_on_Popup_about_to_show"]
[connection signal="popup_hide" from="KeyboardPopup" to="." method="_on_Popup_hide"]
[connection signal="brought_down" from="VisorTransition" to="." method="_on_VisorTransition_brought_down"]
[connection signal="lifted_up" from="VisorTransition" to="." method="_on_VisorTransition_lifted_up"]
